# pysdccc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/pysdccc/: __init__.py  _cli.py  _common.py  _download.py  _result_parser.py  _runner.py  result_parser.py  runner.py
tests/: test_download.py  test_result_parser.py  test_runner.py
